=head1 NAME

Changes - Apache::Test change logfile

=head1 CHANGES

=over 3

=item 1.05-dev

use IPC::Run3 in Apache::TestSmoke to run t/TEST commands,
so as t/SMOKE can be used on Win32 [Stas, Steve Hay, Randy Kobes]

place mod_perl-specific directives in <IfModule> containers
within httpd.conf, allowing the default server to start if
mod_perl isn't present.  [Geoffrey Young]

fix t/request.t to get /index.html, instead of / since not everybody
uses mod_dir [Steve Piner <stevep@marketview.co.nz>]

when testing whether Apache started as root and running under 'nobody'
or alike, will be able to -r/-w/-x in t/ use 'su' instead of 'sudo',
the latter is not available on all unix platforms. [Vivek Khera
<khera@kcilink.com>]

in the Apache/test.pm nuke code s/PERLRUN/FULLPERL/ as older MakeMaker
doesn't have the PERLRUN target [Stas]

Apache 1.3 servers now run in standard prefork mode under
normal operation.  single server mode (httpd -X) was replaced
with MaxClients set to 1 by default.  [Geoffrey Young]

=item 1.04 - September 29, 2003

if the server stops reading from the client before it has sent all its
data, Apache::TestClient (which is used when LWP is not available)
would just die without any error message (5.8.1) because no SIGPIPE
handler was setup and the Broken Pipe error was missed. Replacing
'print $s' with $s->send() solves this problem: Apache::TestClient
will just move on without bailing out. [Stas]

if env var APACHE_TEST_PRETEND_NO_LWP is true, Apache::Test will
pretend that LWP is not available. useful for testing whether the test
suite will survive on a system which doesn't have libwww-perl
installed. [Stas]

Apache::TestSmoke provides a new mode: -bug_mode, which runs an
equivalent of plain 't/TEST' but generates a lot of useful debug
information, in addition to matching the core files to the tests that
caused them. [Stas]

Apache::TestSmoke now scans for core files, just like Apache::TestRun
does [Stas]
